# small-ray-tracer-engine

./: Cargo.toml
.github/workflows/: rust.yml
src/: basic_geometry.rs  basic_types.rs  complex_structures.rs  io.rs  main.rs  ray_tracer.rs
src/basic_geometry/: alighned_box.rs  disk.rs  matrix.rs  normal.rs  plane.rs  point.rs  ray.rs  sphere.rs  triangle.rs  vector.rs
src/basic_types/: bounded.rs
src/complex_structures/: bvh.rs
src/io/: console.rs  obj_file.rs  ppm_image.rs  window.rs
src/ray_tracer/: camera.rs  color.rs  light.rs  material.rs  object.rs  scene.rs  texture.rs  texture_loader.rs  viewframe.rs
