[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4.0"
log = "0.4"
minifb = {version = "0.23", optional = true}
tobj = "3.2"
anyhow = "1.0"

[features]
default = ["windowed"]
windowed = ["dep:minifb"]